--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deep-learning-from-scratch-4"]
-	path = ゼロから作るDeepLearning4-強化学習編/deep-learning-from-scratch-4
+	path = deep-learning-from-scratch-4/deep-learning-from-scratch-4
 	url = git@github.com:oreilly-japan/deep-learning-from-scratch-4.git
