--- a/deep-learning-from-scratch-4/pyproject.toml
+++ b/deep-learning-from-scratch-4/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dezero>=0.0.13",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
 ]
