--- a/deep-learning-from-scratch-4/pyproject.toml
+++ b/deep-learning-from-scratch-4/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dezero>=0.0.13",
+    "gymnasium[classic-control]>=1.2.1",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
 ]
